--- a/package.json
+++ b/package.json
@@ -1,34 +1,63 @@
 {
-  "name": "bf-image-utils",
-  "version": "0.0.1",
+  "name": "@yberion/image-utils",
+  "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
+  "module": "./index.js",
+  "main": "./index.cjs",
+  "types": "./index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./index.js",
+      "require": "./index.cjs",
+      "types": "./index.d.ts"
+    }
+  },
   "scripts": {
     "build": "nx build",
-    "test": "nx test"
+    "build:watch": "nx build --watch=true",
+    "start": "node ./dist/index.js",
+    "start:cjs": "node ./dist/index.cjs",
+    "test": "nx test",
+    "lint": "nx lint",
+    "format": "nx format:write",
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "husky install"
+  },
+  "private": true,
+  "engines": {
+    "node": ">=18.17.0",
+    "pnpm": "^8.6.10"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "~2.6.2"
   },
   "devDependencies": {
-    "@nx/eslint-plugin": "16.6.0",
-    "@nx/js": "16.6.0",
-    "@nx/linter": "16.6.0",
-    "@nx/vite": "16.6.0",
-    "@nx/workspace": "16.6.0",
-    "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitest/coverage-c8": "~0.32.0",
-    "@vitest/ui": "~0.32.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "nx": "16.6.0",
-    "prettier": "^2.6.2",
-    "typescript": "~5.1.3",
-    "vite": "~4.3.9",
-    "vitest": "~0.32.0"
-  },
-  "type": "commonjs",
-  "main": "./src/index.js",
-  "typings": "./src/index.d.ts"
+    "@commitlint/cli": "~17.7.1",
+    "@commitlint/config-conventional": "~17.7.0",
+    "@commitlint/types": "~17.4.4",
+    "@nx/esbuild": "16.8.0-beta.2",
+    "@nx/eslint-plugin": "16.8.0-beta.2",
+    "@nx/js": "16.8.0-beta.2",
+    "@nx/linter": "16.8.0-beta.2",
+    "@nx/vite": "16.8.0-beta.2",
+    "@nx/workspace": "16.8.0-beta.2",
+    "@types/node": "20.5.4",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "@vitest/coverage-v8": "~0.34.2",
+    "changelogen": "~0.5.5",
+    "esbuild": "~0.19.2",
+    "eslint": "8.47.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-deprecation": "~1.5.0",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "husky": "~8.0.3",
+    "lint-staged": "~14.0.1",
+    "nx": "16.8.0-beta.2",
+    "prettier": "~2.8.8",
+    "typescript": "~5.2.2",
+    "vite": "~4.4.9",
+    "vitest": "~0.34.2"
+  }
 }
